# ufc-appbase

./: .env  .gitignore  Cargo.toml  README.md  config.toml
schema/: eth_mysql.json  mysql.json  tm_mysql.json
src/: libs.rs  main.rs  plugin.rs  types.rs  validation.rs
src/error/: error.rs
src/libs/: callback.rs  environment.rs  mongo.rs  mysql.rs  opts.rs  request.rs  rocks.rs  serde.rs  serde_helper.rs  serde_json.rs  serialize.rs  subscribe.rs
src/plugin/: email.rs  ethereum.rs  jsonrpc.rs  mongo.rs  monitor.rs  mysql.rs  rabbit.rs  rocks.rs  slack.rs  subscription.rs  telegram.rs  tendermint.rs
src/types/: block.rs  channel.rs  enumeration.rs  ether_subscribe.rs  jsonrpc.rs  message.rs  mysql.rs  subscribe.rs
src/validation/: ether_subscribe.rs  find_by_key.rs  get_blocks.rs  get_subs.rs  get_task.rs  get_txs.rs  resubscribe.rs  subscribe.rs  unsubscribe.rs  verify.rs
table/: tm_block.sql  tm_tx.sql
