[package]
name = "ufc-appbase"
version = "0.1.0"
authors = ["jungyongum <ian.jungyong.um@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appbase = { git = "https://github.com/turnpike/appbase-rs" }
tokio = "1.8.1"
jsonrpc-core = "17.1.0"
jsonrpc-http-server = "17.1.0"
log = "0.4.14"
serde_json = "1.0.64"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3.15"
rocksdb = "0.16.0"
amiquip = { version = "0.4", default-features = false }
rand = "0.8.4"

[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["async-std-runtime"]
